--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "rimraf": "^3.0.2",
     "simple-git-hooks": "^2.3.1",
     "typescript": "4.3.5"
+  },
+  "resolutions": {
+    "graphql": "^15.5.1"
   }
 }
