--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "4.3.5"
   },
   "resolutions": {
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "prettier": "2.3.2"
   }
 }
