--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,6 +24,7 @@
     "@ipld/dag-cbor": "^6.0.5",
     "@magic-sdk/admin": "^1.3.0",
     "@nftstorage/ipfs-cluster": "^3.3.1",
+    "@nftstorage/db": "^1.0.0",
     "@ssttevee/multipart-parser": "^0.1.9",
     "debug": "^4.3.2",
     "just-safe-set": "^2.2.1",
