--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -4,6 +4,7 @@
   "description": "NFT Storage Tools",
   "private": true,
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "tsc"
   },
@@ -11,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@nftstorage/ipfs-cluster": "^3.3.0",
+    "@nftstorage/db": "^1.0.0",
     "ajv": "^8.6.1",
     "ajv-formats": "^2.1.0",
     "dotenv": "^10.0.0",
@@ -20,12 +22,30 @@
     "listr": "^0.14.3",
     "merge-options": "^3.0.4",
     "ora": "^5.4.1",
-    "p-queue": "6.6.2",
+    "p-queue": "^7.1.0",
     "sade": "^1.7.4"
   },
   "devDependencies": {
     "@types/level": "^6.0.0",
     "@types/listr": "^0.14.3",
-    "@types/sade": "^1.7.2"
+    "@types/sade": "^1.7.2",
+    "eslint": "7.30.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "standard",
+      "prettier"
+    ],
+    "env": {
+      "es2020": true,
+      "browser": true,
+      "node": true
+    },
+    "ignorePatterns": "**/*.ts"
   }
 }
